修改背景色！

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <![endif]-->
 
     <title>Resume by demon7452</title>
+	<style type="text/css">
+	body
+	{
+		background: -webkit-linear-gradient(left,#9CF,#9CC,#9C9,#9C6,#9C3,#990);
+	}
+</style>
   </head>
 
   <body>
