--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="inner">
         <h1>Resume</h1>
         <h2>My personal resume,我的个人简历</h2>
-        <a href="https://github.com/demon7452/Resume" class="button"><small>View project on</small>GitHub</a>
+        <a href="https://github.com/demon7452/Resume" class="button" target="_blank"><small>View project on</small>GitHub</a>
       </div>
     </header>
 
