IE浏览器存在兼容问题，尚未解决！

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<style type="text/css">
 	body
 	{
+		background: linear-gradient(left,#9CF,#9CC,#9C9,#9C6,#9C3,#990);
 		background: -webkit-linear-gradient(left,#9CF,#9CC,#9C9,#9C6,#9C3,#990);
 	}
 	div.inner2 h2
