简历怎么写啊，没什么好写的啊！

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 	{
 		font-size:20px;
 	}
+	th.education
+	{
+		font-size:26px;
+	}
     </style>
 <script type="text/javascript">
 	function printdiv()
@@ -93,6 +97,32 @@
                     </tr>
                      <tr>
                     	<th>联系电话：</th><td>13655510714</td><th>邮箱：</th><td><a href="mailto:demonli7452@gmail.com">demonli7452@gmail.com</a></td>
+                    </tr>
+                    <tr>
+                    	<th colspan="4" class="education">教育经历</th>
+                    </tr>
+                    <tr>
+                    	<th colspan="4" align="left">毕业院校：  合肥工业大学</br>最高学历：  本科</br>就读时间： 2011年8月---2015年6月</br>就读专业：  软件工程</th>
+                    </tr>
+
+                    <tr>
+                    	<th colspan="4" class="education">个人简述</th>
+                    </tr>
+                    <tr>
+                    	<th colspan="4" align="left">
+                        	GitHub地址：<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>
+                        	个人主页：<a href="http://demon7452.github.io" target="_blank">http://demon7452.github.io</a></br>
+                            个人简历页：<a href="http://demon7452.github.io/Resume/" target="_blank">http://demon7452.github.io/Resume</a></br>
+                        </th>
+                    </tr>
+                    <tr>
+                    	<th colspan="4" class="education">工作经历</th>
+                    </tr>
+                    <tr>
+                    	<th colspan="4" align="left">
+                        	在合肥三立实习</br>
+                        	待续……
+                        </th>
                     </tr>
                 </tbody>
             </table>
