--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-			<!-- 简历正文 -->
+			<!-- 简历正文表 -->
       		<table id="resume">
             	<thead>
                 	<tr>
@@ -86,14 +86,14 @@
                 	<tr>
                     	<th>姓名：</th><td>李雄</td><th>性别：</th><td>男</td>
                     </tr>
-                    <tr>
-                    	<th>出生年月：</th><td>1991年10月</td><th>籍贯：</th><td>安徽合肥</td>
-                    </tr>
-                    <tr>
+					<tr>
                     	<th>毕业院校：</th><td>合肥工业大学</td><th>专业：</th><td>软件工程</td>
                     </tr>
-                     <tr>
-                    	<th>英语能力：</th><td>英语4级</td><th>民族：</th><td>汉</td>
+                    <tr>
+                    	<th>出生年月：</th><td>1991年10月</td><th>学位：</th><td>学士</td>
+                    </tr>
+                    <tr>
+                    	<th>英语能力：</th><td>英语4级</td><th>籍贯：</th><td>安徽合肥</td>
                     </tr>
                      <tr>
                     	<th>联系电话：</th><td>13655510714</td><th>邮箱：</th><td><a href="mailto:demonli7452@gmail.com">demonli7452@gmail.com</a></td>
@@ -104,15 +104,20 @@
                     <tr>
                     	<th colspan="4" align="left">毕业院校：  合肥工业大学</br>最高学历：  本科</br>就读时间： 2011年8月---2015年6月</br>就读专业：  软件工程</th>
                     </tr>
-
                     <tr>
                     	<th colspan="4" class="education">个人简述</th>
                     </tr>
                     <tr>
                     	<th colspan="4" align="left">
-                        	GitHub地址：<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>
-                        	个人主页：<a href="http://demon7452.github.io" target="_blank">http://demon7452.github.io</a></br>
-                            个人简历页：<a href="http://demon7452.github.io/Resume/" target="_blank">http://demon7452.github.io/Resume</a></br>
+							&diams; 掌握java 语言，理解javaEE开发流程；</br>
+							&diams; 熟悉C++语言，熟悉数据库SQL；</br>
+							&diams; 熟悉Html、CSS,理解javascript</br>
+							&diams; 理解Android应用开发；</br>
+							&diams; 理解软件开发流程、软件结构设计、需求分析；</br>
+							&diams; 理解软件测试相关技术；</br>
+                        	&diams; GitHub：项目主页-<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号概述-<a href="http://resume.github.io/?demon7452" target="_blank">http://resume.github.io/?demon7452</a></br>
+                        	&diams; 个人主页：<a href="http://demon7452.github.io" target="_blank">http://demon7452.github.io</a></br>
+                            &diams; 个人简历页：<a href="http://demon7452.github.io/Resume/" target="_blank">http://demon7452.github.io/Resume</a></br>
                         </th>
                     </tr>
                     <tr>
@@ -120,14 +125,15 @@
                     </tr>
                     <tr>
                     	<th colspan="4" align="left">
-                        	在合肥三立实习</br>
-                        	待续……
+                        	&diams; 2014年8月-- …… 在合肥三立自动化工程有限公司实习</br>
+							&nbsp;&nbsp;目前在使用java语言为土壤墒情站终端编写上位机终端升级软件；</br>
+                        	&diams; 待续……
                         </th>
                     </tr>
                 </tbody>
             </table>
         </section>
-
+		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button">打印简历</a>
           <a href="https://github.com/demon7452/Resume/zipball/master" class="button">
@@ -141,6 +147,7 @@
         </aside>
     
       </div>
+	  <!-- 注脚 -->
       <footer>
          <p align="center">
             @copy; demon7452 2014,Contact: <a href="mailto:demonli7452@gmail.com">demonli7452@gmail.com</a>| All Rights Reserved.
