修改简历下载按钮！

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button">打印简历</a>
-          <a href="https://github.com/demon7452/Resume/zipball/master" class="button">
+          <a href="https://github.com/demon7452/Resume/archive/resume.zip" class="button">
             <small>Download</small>
             .zip file
           </a>
