修改下载按钮，改为直接下载文件！

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     	<th>英语能力：</th><td>英语4级</td><th>籍贯：</th><td>安徽合肥</td>
                     </tr>
                      <tr>
-                    	<th>联系电话：</th><td>13655510714</td><th>邮箱：</th><td><a href="mailto:demonli7452@gmail.com">demonli7452@gmail.com</a></td>
+                    	<th>联系电话：</th><td>13655510714</td><th>邮箱：</th><td><a href="mailto:lixiong_job@163.com">lixiong_job@163.com</a></td>
                     </tr>
                     <tr>
                     	<th colspan="4" class="education">教育经历</th>
@@ -135,10 +135,10 @@
         </section>
 		<!-- 边框-->
         <aside id="sidebar">
-          <a href="javascript:printdiv()" target="_blank" class="button">打印简历</a>
-          <a href="https://github.com/demon7452/Resume/archive/resume.zip" class="button">
+          <a href="javascript:printdiv()" target="_blank" class="button"><small>打印简历</small>Print resume</a>
+          <a href="http://demon7452.github.io/Resume/images/李雄-合肥工业大学.doc" class="button" download="李雄-合肥工业大学">
             <small>Download</small>
-            .zip file
+            resume file
           </a>
           <p class="repo-owner"><a href="https://github.com/demon7452/Resume"></a> is maintained by <a href="https://github.com/demon7452">demon7452</a>.</p>
 
