change the title!

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Resume of lixiong</title>
+    <title>Resume of lixiong:Java and Android programmer</title>
 	<style type="text/css">
 	body
 	{
@@ -62,7 +62,7 @@
     <header>
       <div class="inner">
         <h1>Resume</h1>
-         <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;------My personal resume,我的个人简历</h2>
+         <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;------lixiong:Java and Android programmer</h2>
          <a href="http://demon7452.github.io/" class="button" target="_blank">个人主页<small>猛戳链接……</small></a>	
       </div>
 	  <div class="inner2">
