修改简历添加，求职意向模板！

--- a/company/model.html
+++ b/company/model.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -98,6 +98,9 @@
                     <tr>
                     	<th>联系电话：</th><td>13655510714</td><th>邮箱：</th><td><a href="mailto:lixiong_job@163.com">lixiong_job@163.com</a></td>
                     </tr>
+					<tr>
+                    	<th colspan="4" class="job">&nbsp;&nbsp;求职意向：</th>
+                    </tr>
                     <tr>
                     	<th colspan="4" class="education">教育经历</th>
                     </tr>
@@ -109,6 +112,7 @@
                     </tr>
                     <tr>
                     	<th colspan="4" align="left">
+							=========================================</br>
 							&diams; 学习git的初入茅庐者，正在积极探索伟大的开源社区；</br>
 							&diams; 掌握java 语言，理解javaEE开发流程；</br>
 							&diams; 了解C语言，熟悉Eclipse IDE；</br>
