修改简历下载路径！！

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button"><small>打印简历</small>Print resume</a>
-          <a href="http://demon7452.github.io/Resume/images/李雄-合肥工业大学.doc" class="button" download="李雄-合肥工业大学">
+          <a href="http://demon7452.github.io/Resume/docs/李雄-合肥工业大学.doc" class="button" download="李雄-合肥工业大学">
             <small>Download</small>
             resume file
           </a>
