--- a/company/ctrip.html
+++ b/company/ctrip.html
@@ -36,21 +36,22 @@
     }
 	table thead
 	{
-		font-size:30px;
+		font-size:28px;
 	}
 	table tbody
 	{
-		font-size:20px;
+		font-size:17.4px;
 	}
 	th.education
 	{
-		font-size:26px;
+		font-size:23px;
 	}
 	th.job
 	{
-		font-size:26px;
+		font-size:23px;
 		text-align:left;
 	}
+
     </style>
 <script type="text/javascript">
 	function printdiv()
@@ -105,13 +106,13 @@
                     	<th colspan="4" class="education">教育经历</th>
                     </tr>
                     <tr>
-                    	<th colspan="4" align="left">毕业院校：  合肥工业大学</br>最高学历：  本科</br>就读时间： 2011年8月---2015年6月</br>就读专业：  软件工程</br>英语能力： 英语4级</th>
+                    	<th colspan="4" align="left" id="skill">毕业院校：  合肥工业大学</br>最高学历：  本科</br>就读时间： 2011年8月---2015年6月</br>就读专业：  软件工程</br>英语能力： 英语4级</th>
                     </tr>
                     <tr>
                     	<th colspan="4" class="education">个人简述</th>
                     </tr>
                     <tr>
-                    	<th colspan="4" align="left">
+                    	<th colspan="4" align="left" id="skill">
 							&diams; 拥有良好Java基础知识，Java代码量达到一万条以上；</br>
 							&diams; 热爱移动端，未来想往移动端发展；</br>
 							&diams; 喜欢Android,开发过简单的Android应用；</br>
@@ -135,7 +136,7 @@
                     	<th colspan="4" class="education">工作经历</th>
                     </tr>
                     <tr>
-                    	<th colspan="4" align="left">
+                    	<th colspan="4" align="left" id="skill">
                         	&diams; 2014年8月-- …… 在合肥三立自动化工程有限公司实习</br>
 							&nbsp;&nbsp;目前在使用java语言为土壤墒情站终端编写上位机终端升级软件；</br>
                         	&diams; 待续……
