--- a/company/wangyi.html
+++ b/company/wangyi.html
@@ -100,7 +100,7 @@
                     	<th>联系电话：</th><td>13655510714</td><th>邮箱：</th><td><a href="mailto:lixiong_job@163.com">lixiong_job@163.com</a></td>
                     </tr>
 					<tr>
-                    	<th colspan="4" class="job">&nbsp;&nbsp;求职意向：软件工程师(移动端)</th>
+                    	<th colspan="4" class="job">&nbsp;&nbsp;求职意向：Android开发工程师(支付部)J2593</th>
                     </tr>
                     <tr>
                     	<th colspan="4" class="education">教育经历</th>
@@ -148,7 +148,7 @@
 		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button"><small>打印简历</small>Print resume</a>
-          <a href="http://demon7452.github.io/Resume/docs/软件工程师(移动端)-李雄.doc" class="button" download="软件工程师(移动端)-李雄">
+          <a href="http://demon7452.github.io/Resume/docs/Android开发工程师(支付部)J2593-李雄.doc" class="button" download="Android开发工程师(支付部)J2593-李雄">
             <small>Download</small>
             resume file
           </a>
