--- a/company/wangyi.html
+++ b/company/wangyi.html
@@ -129,7 +129,7 @@
 							&diams; 理解软件测试相关技术；</br>
                         	&diams; GitHub：项目主页-<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号概述-<a href="http://resume.github.io/?demon7452" target="_blank">http://resume.github.io/?demon7452</a></br>
                         	&diams; 个人主页：<a href="http://demon7452.github.io" target="_blank">http://demon7452.github.io</a></br>
-                            &diams; 个人简历页：<a href="http://demon7452.github.io/Resume/company/ctrip" target="_blank">http://demon7452.github.io/Resume/company/ctrip</a></br>
+                            &diams; 个人简历页：<a href="http://demon7452.github.io/Resume/company/wangyi" target="_blank">http://demon7452.github.io/Resume/company/wangyi</a></br>
                         </th>
                     </tr>
                     <tr>
