--- a/company/leyuan.html
+++ b/company/leyuan.html
@@ -142,7 +142,7 @@
 		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button"><small>打印简历</small>Print resume</a>
-          <a href="http://demon7452.github.io/Resume/images/李雄-合肥工业大学-软件工程-软件工程师.doc" class="button" download="李雄-合肥工业大学-软件工程-软件工程师">
+          <a href="http://demon7452.github.io/Resume/docs/李雄-合肥工业大学-软件工程-软件工程师.doc" class="button" download="李雄-合肥工业大学-软件工程-软件工程师">
             <small>Download</small>
             resume file
           </a>
