赶集网校招

--- a/company/ganji.html
+++ b/company/ganji.html
@@ -113,7 +113,6 @@
                     </tr>
                     <tr>
                     	<th colspan="4" align="left" id="skill">
-							&diams; 拥有良好Java基础知识，Java代码量达到一万条以上；</br>
 							&diams; 热爱移动端，未来想往移动端发展；</br>
 							&diams; 喜欢Android,开发过简单的Android应用；</br>
 							&diams; 热爱开源，正在使用Github进行代码管理，follow在大牛后面学习；</br>
@@ -129,7 +128,7 @@
 							&diams; 理解软件测试相关技术；</br>
                         	&diams; GitHub：项目主页-<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号概述-<a href="http://resume.github.io/?demon7452" target="_blank">http://resume.github.io/?demon7452</a></br>
                         	&diams; 个人主页：<a href="http://demon7452.github.io" target="_blank">http://demon7452.github.io</a></br>
-                            &diams; 个人简历页：<a href="http://demon7452.github.io/Resume/company/360" target="_blank">http://demon7452.github.io/Resume/company/360</a></br>
+                            &diams; 个人简历页：<a href="http://demon7452.github.io/Resume/company/ganji" target="_blank">http://demon7452.github.io/Resume/company/ganji</a></br>
                         </th>
                     </tr>
                     <tr>
@@ -148,7 +147,7 @@
 		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button"><small>打印简历</small>Print resume</a>
-          <a href="http://demon7452.github.io/Resume/docs/手机软件开发工程师-李雄.doc" class="button" download="手机软件开发工程师-李雄">
+          <a href="http://demon7452.github.io/Resume/docs/手机客户端研发工程师-李雄.doc" class="button" download="手机客户端研发工程师-李雄">
             <small>Download</small>
             resume file
           </a>
