--- a/company/ganji.html
+++ b/company/ganji.html
@@ -100,7 +100,7 @@
                     	<th>联系电话：</th><td>13655510714</td><th>邮箱：</th><td><a href="mailto:lixiong_job@163.com">lixiong_job@163.com</a></td>
                     </tr>
 					<tr>
-                    	<th colspan="4" class="job">&nbsp;&nbsp;求职意向：手机软件开发工程师</th>
+                    	<th colspan="4" class="job">&nbsp;&nbsp;求职意向：手机客户端研发工程师</th>
                     </tr>
                     <tr>
                     	<th colspan="4" class="education">教育经历</th>
