--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          <a href="http://demon7452.github.io/" class="button" target="_blank">个人主页<small>猛戳链接……</small></a>	
       </div>
 	  <div class="inner2">
-        <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;人生在世，俯仰之间，</h2>
+        <h2>人生在世，俯仰之间，</h2>
         <h2>自当追求卓越，但有尽其所能……</h2>
         <a href="https://github.com/demon7452/Resume" class="button" target="_blank"><small>View project on</small>GitHub</a>
 	  </div>
