--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 		font-size:26px;
 		text-align:left;
 	}
+	ul
+	{
+		font-size:16px;
+	}
     </style>
 <script type="text/javascript">
 	function printdiv()
@@ -93,10 +97,6 @@
                 	<tr>
                     	<th>姓名：</th><td>李雄</td><th>性别：</th><td>男</td>
                     </tr>
-
-                    <tr>
-                    	<th>出生年月：</th><td>1991年10月</td><th>籍贯：</th><td>安徽合肥</td>
-                    </tr>
                     <tr>
                     	<th>联系电话：</th><td>13655510714</td><th>邮箱：</th><td><a href="mailto:lixiong_job@163.com">lixiong_job@163.com</a></td>
                     </tr>
@@ -104,24 +104,23 @@
                     	<th colspan="4" class="education">教育经历</th>
                     </tr>
                     <tr>
-                    	<th colspan="4" align="left">毕业院校：  合肥工业大学</br>最高学历：  本科</br>就读时间： 2011年8月---2015年6月</br>就读专业：  软件工程</br>英语能力： 英语4级</th>
+                    	<th colspan="4" align="left">毕业院校：  合肥工业大学</br>最高学历：  本科</br>就读时间： 2011年8月---2015年6月</br>就读专业：  软件工程</th>
                     </tr>
                     <tr>
                     	<th colspan="4" class="education">个人简述</th>
                     </tr>
                     <tr>
                     	<th colspan="4" align="left">
-							&diams; 学习git的初入茅庐者，正在积极探索伟大的开源社区；</br>
-							&diams; 掌握java 语言，理解javaEE开发流程；</br>
-							&diams; 了解C语言，熟悉Eclipse IDE；</br>
-							&diams; 熟悉C++语言，熟悉数据库SQL；</br>
-							&diams; 熟悉Html、CSS,理解javascript</br>
-							&diams; 理解Android应用开发；</br>
-							&diams; 理解软件开发流程、软件结构设计、需求分析；</br>
-							&diams; 理解软件测试相关技术；</br>
-                        	&diams; GitHub：项目主页-<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号概述-<a href="http://resume.github.io/?demon7452" target="_blank">http://resume.github.io/?demon7452</a></br>
+							&diams; 熟练掌握java语言开发; </br>
+							&diams; 熟悉JSP、Servlet等Java EE 相关知识，熟悉Spring、Spring MVC 等Web框架；</br>
+							&diams; 熟悉Html、CSS、javascript;熟练使用Ajax交互技术和JQuery等 js库；</br>
+							&diams; 掌握git版本控制系统;  熟练使用gradle构建工具；</br>
+							&diams; 熟悉 Redis 数据库；</br>
+							&diams; 熟悉 RabbitMQ 消息队列；</br>
+							&diams; 了解 Ngnix 服务器；</br>
+							&diams; 熟悉 MySQL 数据库；了解MongoDB数据库</br>
+                        	&diams; GitHub：项目主页-<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>
                         	&diams; 个人主页：<a href="http://demon7452.github.io" target="_blank">http://demon7452.github.io</a></br>
-                            &diams; 个人简历页：<a href="http://demon7452.github.io/Resume/" target="_blank">http://demon7452.github.io/Resume</a></br>
                         </th>
                     </tr>
                     <tr>
@@ -129,9 +128,29 @@
                     </tr>
                     <tr>
                     	<th colspan="4" align="left">
-                        	&diams; 2014年8月-- …… 在合肥三立自动化工程有限公司实习</br>
-							&nbsp;&nbsp;目前在使用java语言为土壤墒情站终端编写上位机终端升级软件；</br>
-                        	&diams; 待续……
+                        	&diams; 真旅网计算机软件开发(上海)有限公司 &nbsp;&nbsp;&nbsp;&nbsp; 2015.07-至今</br>
+                        	&diams; 合肥三立自动化工程有限公司  &nbsp;&nbsp;&nbsp;&nbsp;  2014.08-2015.01</br>
+                        </th>
+                    </tr>
+					<tr>
+                    	<th colspan="4" class="education">项目经验</th>
+                    </tr>
+					<tr>
+                    	<th colspan="4" align="left">
+                        &diams;CANA金融信息管理平台&nbsp;&nbsp;&nbsp;&nbsp;2015.11 -- 2016.02</br>
+						<ul>
+							<li>在服务器上搭建Redis,尝试配置redis.conf . 并学习通过配置Spring的JedisConnectionFactory和RedisTemplate来使用Redis，进行基本的存取操作;</li>
+							<li>在服务器上尝试使用单机模式搭建zookeeper服务，同时搭建Zookeeper的网页图形管理工具zk-web，方便查看使用；</li>
+							<li>开发权限管理模块，负责编写前端页面所需的js、Controller层和服务器端所需的API。在开发过程中解决的难点有:根据权限的父子关系生成完整的权限树；在前端将获取到的权限树使用JQuery的zTree插件生成所需的树状图形。</li>
+							<li>开发融资管理模块的融资信息录入、管理等功能。在开发过程中解决的难点有Excel录入信息时使用POI和jxl对不同的单元格类型进行解析处理；使用Redis高速缓存的特性来支持对大量融资信息进行频繁的读写操作。</li>
+							<li>开发报表模块的报表生成任务。在开发过程中解决的难点有使用线程池将每一个生成报表的线程放入其中，并顺序执行。</li>
+						</ul>
+						&diams;真旅网机票自动化工具&nbsp;&nbsp;&nbsp;&nbsp;2015.07 -- 2015.10</br>
+						<ul>
+							<li>参与对部分航司进行机票运价爬取的开发。在开发过程中，通过创建生产者将需要进行运价爬取的任务发送到RabbitMQ消息队列中，通过消费者从消息队列获取任务并执行相应的运价爬取任务。</li>
+							<li>参与机票比价功能的开发。在开发过程中，对接收到的比价请求进行处理，通过使用Selenium获取相应航班的机票价格，进行对比后返回比价结果。</li>
+							<li>参与对客户订单完成机票自动出票的功能。开发过程，接收客户的订单请求，根据订单信息使用Selenium操作浏览器完成对相应航班机票自动下单购买的功能。</li>
+						</ul>
                         </th>
                     </tr>
                 </tbody>
@@ -140,7 +159,7 @@
 		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button"><small>打印简历</small>Print resume</a>
-          <a href="http://demon7452.github.io/Resume/docs/李雄-合肥工业大学.doc" class="button" download="李雄-合肥工业大学">
+          <a href="http://demon7452.github.io/Resume/docs/李雄-Java研发工程师.doc" class="button" download="李雄-Java研发工程师">
             <small>Download</small>
             resume file
           </a>
