--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button"><small>打印简历</small>Print resume</a>
-          <a href="http://demon7452.github.io/Resume/docs/李雄-Java研发工程师.doc" class="button" download="李雄-Java研发工程师">
+          <a href="http://demon7452.github.io/Resume/docs/李雄-Java研发工程师.doc" class="button" download="李雄-Java研发工程师.doc">
             <small>Download</small>
             resume file
           </a>
