--- a/index.html
+++ b/index.html
@@ -113,12 +113,14 @@
                     	<th colspan="4" align="left">
 							&diams; 熟练掌握java语言开发; </br>
 							&diams; 熟悉JSP、Servlet等Java EE 相关知识，熟悉Spring、Spring MVC 等Web框架；</br>
-							&diams; 熟悉Html、CSS、javascript;熟练使用Ajax交互技术和JQuery等 js库；</br>
+							&diams; 熟悉Html、CSS、javascript等web基础知识;</br>
+							&diams; 熟练使用Ajax交互技术、JQuery js库 和 KendoUI js框架；</br>
 							&diams; 掌握git版本控制系统;  熟练使用gradle构建工具；</br>
 							&diams; 熟悉 Redis 数据库；</br>
 							&diams; 熟悉 RabbitMQ 消息队列；</br>
 							&diams; 了解 Ngnix 服务器；</br>
-							&diams; 熟悉 MySQL 数据库；了解MongoDB数据库</br>
+							&diams; 熟悉 MySQL 数据库；了解MongoDB数据库；</br>
+							&diams; 能够使用Cat对业务系统做监控和报警，使用selenium进行网站爬取；</br>
                         	&diams; GitHub：项目主页-<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>
                         	&diams; 个人主页：<a href="http://demon7452.github.io" target="_blank">http://demon7452.github.io</a></br>
                         </th>
