--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 							&diams; 熟悉 RabbitMQ 消息队列；</br>
 							&diams; 了解 Ngnix 服务器；</br>
 							&diams; 熟悉 MySQL 数据库；了解MongoDB数据库；</br>
-							&diams; 能够使用Cat对业务系统做监控和报警，使用selenium进行网站爬取；</br>
+							&diams; 能够使用selenium进行网站爬取；</br>
                         	&diams; GitHub：项目主页-<a href="https://github.com/demon7452" target="_blank">https://github.com/demon7452</a></br>
                         	&diams; 个人主页：<a href="http://demon7452.github.io" target="_blank">http://demon7452.github.io</a></br>
                         </th>
@@ -145,7 +145,6 @@
 							<li>在服务器上尝试使用单机模式搭建zookeeper服务，同时搭建Zookeeper的网页图形管理工具zk-web，方便查看使用；</li>
 							<li>开发权限管理模块，负责编写前端页面所需的js、Controller层和服务器端所需的API。在开发过程中解决的难点有:根据权限的父子关系生成完整的权限树；在前端将获取到的权限树使用JQuery的zTree插件生成所需的树状图形。</li>
 							<li>开发融资管理模块的融资信息录入、管理等功能。在开发过程中解决的难点有Excel录入信息时使用POI和jxl对不同的单元格类型进行解析处理；使用Redis高速缓存的特性来支持对大量融资信息进行频繁的读写操作。</li>
-							<li>开发报表模块的报表生成任务。在开发过程中解决的难点有使用线程池将每一个生成报表的线程放入其中，并顺序执行。</li>
 						</ul>
 						&diams;真旅网机票自动化工具&nbsp;&nbsp;&nbsp;&nbsp;2015.07 -- 2015.10</br>
 						<ul>
