add download file

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 		<!-- 边框-->
         <aside id="sidebar">
           <a href="javascript:printdiv()" target="_blank" class="button"><small>打印简历</small>Print resume</a>
-          <a href="http://demon7452.github.io/Resume/docs/李雄-Java研发工程师.doc" class="button" download="李雄-Java研发工程师.doc">
+          <a href="http://demon7452.github.io/Resume/docs/李雄-Java研发工程师.pdf" class="button" download="李雄-Java研发工程师.pdf">
             <small>Download</small>
             resume file
           </a>
